@@ -6,7 +6,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.23"/>
+  <property name="version" value="0.24"/>
   <property name="jre" location="${home}/jre_base_desktop"/>
 
   <import file="../../base.xml"/>
